# Tareas_IoT

./: .gitignore  LICENSE  README.md  instrucciones_venv.txt  requirements.txt  tarea1.gitignore
Server_Raspberry/: TCPRaspServer.py
Tarea 1/ESP32/Cliente TCP/: tcp_client.c
Tarea 1/ESP32/Cliente TCP/main/: CMakeLists.txt  tcp_client.c
Tarea 1/ESP32/Cliente UDP/: udp_client.c
Tarea 1/ESP32/Datos/: packeting.c  sensors.c
Tarea 1/Raspberry/Server_Raspberry/: DatabaseWork.py  Desempaquetamiento.py  RaspServer.py  TCPRaspServer.py  UDPRaspServer.py
Tarea_1/ESP32/Cliente_TCP/: CMakeLists.txt  sdkconfig
Tarea_1/ESP32/Cliente_TCP/main/: CMakeLists.txt  tcp_client.c  tcp_client_main.c
Tarea_1/ESP32/Cliente_UDP/: CMakeLists.txt  sdkconfig.old
Tarea_1/ESP32/Cliente_UDP/main/: udp_client.c
Tarea_1/ESP32/Datos/: packeting.c
Tarea_1/Raspberry/Server_Raspberry/: DB.sqlite  DatabaseWork.py  Desempaquetamiento.py  RaspServer.py  TCPRaspServer.py  UDPRaspServer.py  sqlInit.py
Tarea_2/: 2022102011407AEEC4E371EEBCA0__gui_t2.ui  2022102011407EC5F7230F4F8DF7__bd.mwb  gui_t2.ui
Tarea_2/ESP32/Cliente_TCP/: CMakeLists.txt  sdkconfig  sdkconfig.old
Tarea_2/ESP32/Cliente_TCP/main/: CMakeLists.txt  Kconfig.projbuild
Tarea_2/ESP32/Cliente_UDP/: sdkconfig
Tarea_2/ESP32/Datos/: packeting.c  sensors.c
Tarea_2/Raspberry/Server_Raspberry/: ConnectBLE.py  DatabaseWork.py  Desempaquetamiento.py  RaspServer.py  TCPRaspServer.py  gui.py
